--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,10 @@ body {
   accent-color: var(--color-accent);
 }
 
+html.dark body {
+  background: url(../public/dark_bg.jpeg);
+  background-size: cover;
+}
 #root {
   width: 100%;
   height: 60%;
